# drake

./: README.md
catkin_ws/src/lcm_to_ros/autosrc/: CMakeLists.txt  example_topic_republisher.cpp  lcmt_iiwa_ee_pose_republisher.cpp  lcmt_iiwa_status_republisher.cpp  other_topic_republisher.cpp
catkin_ws/src/lcm_to_ros/exlcm/: lcmt_iiwa_command.hpp  lcmt_iiwa_ee_pose.hpp  lcmt_iiwa_status.hpp  lcmt_iiwa_status_telemetry.hpp
catkin_ws/src/lcm_to_ros/exlcm_rehash/: example_type.hpp
catkin_ws/src/lcm_to_ros/launch/: kuka_iiwa_republisher.launch
catkin_ws/src/lcm_to_ros/lcm/: lcmt_iiwa_command.lcm  lcmt_iiwa_ee_pose.lcm  lcmt_iiwa_status.lcm  lcmt_iiwa_status_telemetry.lcm
catkin_ws/src/lcm_to_ros/msg/: example_type.msg  lcmt_iiwa_command.msg  lcmt_iiwa_ee_pose.msg  lcmt_iiwa_status.msg  lcmt_iiwa_status_telemetry.msg  simple_channel.msg
catkin_ws/src/lcm_to_ros/repub_configs/: kuka_iiwa_republisher.cfg
catkin_ws/src/ridgeback_teleop/: CMakeLists.txt  package.xml
catkin_ws/src/ridgeback_teleop/scripts/: ft_cart_frame.py  ft_measurements.py  ft_measurements2.py  move_base.py  null_space_base_cart.py  parameter_estimator.py  parameter_estimator_test.py  ridgeback1_teleop.py  tri_demo_move_base.py
catkin_ws/src/ridgeback_teleop/src/: ridgeback2_teleop.py
catkin_ws/src/wrist_tracking/: CMakeLists.txt  package.xml
catkin_ws/src/wrist_tracking/msg/: lcmt_iiwa_ee_pose.msg
catkin_ws/src/wrist_tracking/scripts/: Consensus_LCM.py  Consensus_LCM2.py  MM_send_ee_pose.py  move_base.py  python_kinematics.py  python_kinematics_ROS.py  python_kinematics_ROS_drake.py  send_pos_example_drake.py  talker.cpp  wrist_tracker.py  wrist_tracker_LCM.py
catkin_ws/src/wrist_tracking/scripts/exlcm/: example_list_t.py  example_t.py  example_t_original.py  exampleconst_t.py  muldim_array_t.py  node_t.py
examples/: BUILD.bazel
examples/kuka_iiwa_arm/: BUILD.bazel  barrier_position.csv  kuka_plan_runner.cc  kuka_simulation.cc  kuka_task_control_final.cc  out_barrier_position.csv
examples/kuka_iiwa_arm/Experiment_1_IROS_2022/: barrier_position.csv  ee_position.csv  ee_velocity.csv  joint_position.csv  joint_velocity.csv  target_position.csv  torque_value.csv
examples/kuka_iiwa_arm/experiment_data/: mu_singular.csv  out_barrier_position.csv
examples/kuka_iiwa_arm_robust/: BUILD.bazel  iiwa_common.cc  iiwa_controller.cc  iiwa_lcm.cc  kuka_plan_runner.cc  kuka_simulation.cc  kuka_task_control.cc  kuka_torque_controller.cc  lcm_plan_interpolator.cc  move_iiwa_ee.cc
examples/kuka_iiwa_arm_robust/test/: kuka_torque_controller_test.cc
lcmtypes/: BUILD.bazel  defs.bzl  lcmt_iiwa_ee_pose.lcm
manipulation/models/iiwa_description/urdf/: iiwa14_no_collision_robust.urdf  iiwa14_polytope_collision_robust.urdf
manipulation/util/: move_ik_demo_base.cc  move_ik_demo_base.h
