# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load(
    "@drake//tools/skylark:drake_py.bzl",
    "drake_py_unittest",
)
load("@drake//tools/install:install.bzl", "install")
load("@drake//tools/install:install_data.bzl", "install_data")
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = [":__subpackages__"],
)

COPTS = [
    "-Wno-error=shadow",
    "-Wno-error=deprecated",
    "-Wno-error=narrowing",
    "-Wno-error=unused-variable",
    "-Wno-error=unused-parameter",
    "-Wno-error=unused-value",
    "-Wno-error=unused-but-set-variable",
    "-Wno-error=sign-compare",
    # "-I /usr/local/include/qpmad/",     
]


Linkopts = [
    # "-lnlopt",
    # "-lm",
    "-lpthread",
]

drake_cc_library(
    name = "iiwa_common",
    srcs = [
        "iiwa_common.cc",
    ],
    hdrs = [
        "iiwa_common.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//manipulation/kuka_iiwa:iiwa_constants",
    ],
)

drake_cc_library(
    name = "iiwa_lcm",
    srcs = ["iiwa_lcm.cc"],
    hdrs = ["iiwa_lcm.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//manipulation/kuka_iiwa",
    ],
)

drake_cc_library(
    name = "lcm_plan_interpolator",
    srcs = ["lcm_plan_interpolator.cc"],
    hdrs = [
        "lcm_plan_interpolator.h",
    ],
    # TODO(hongkai.dai): move this package to manipulation folder.
    visibility = ["//visibility:public"],
    deps = [
        ":iiwa_common",
        ":iiwa_lcm",
        "//manipulation/planner:robot_plan_interpolator",
        "//systems/framework:diagram_builder",
        "//systems/primitives:demultiplexer",
    ],
)

drake_cc_library(
    name = "kuka_torque_controller",
    srcs = ["kuka_torque_controller.cc"],
    hdrs = ["kuka_torque_controller.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//multibody/plant",
        "//systems/controllers:inverse_dynamics",
        "//systems/controllers:pid_controller",
        "//systems/controllers:state_feedback_controller_interface",
        "//systems/framework:diagram_builder",
        "//systems/framework:leaf_system",
        "//systems/primitives:adder",
        "//systems/primitives:pass_through",
    ],
)

drake_cc_binary(
    name = "iiwa_controller",
    srcs = ["iiwa_controller.cc"],
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        ":iiwa_common",
        ":lcm_plan_interpolator",
        "//common:add_text_logging_gflags",
        "//lcm:drake_lcm",
        "//systems/analysis:simulator",
    ],
)

drake_cc_binary(
    name = "kuka_simulation",
    srcs = ["kuka_simulation.cc"],
    add_test_rule = 1,
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    test_rule_args = ["--simulation_sec=0.1 --target_realtime_rate=0.0"],
    # TODO(kyle.edwards@kitware.com): Re-enable this test when it no longer
    # causes timeouts in kcov.
    test_rule_tags = ["no_kcov"],
    deps = [
        ":iiwa_common",
        ":iiwa_lcm",
        ":kuka_torque_controller",
        "//common:add_text_logging_gflags",
        "//geometry:drake_visualizer",
        "//lcm",
        "//multibody/parsing",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/controllers:inverse_dynamics_controller",
        "//systems/controllers:state_feedback_controller_interface",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:demultiplexer",
        "//systems/primitives:discrete_derivative",
    ],
)

drake_cc_binary(
    name = "kuka_plan_runner",
    srcs = ["kuka_plan_runner.cc"],
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common/trajectories:piecewise_polynomial",
        "//lcmtypes:iiwa",
        "//lcmtypes:robot_plan",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)

drake_cc_binary(
    name = "kuka_task_control",
    srcs = ["kuka_task_control.cc"],
    copts = COPTS,
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common/trajectories:piecewise_polynomial",
        "//lcmtypes:iiwa",
        "//lcmtypes:robot_plan",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)

drake_cc_binary(
    name = "kuka_task_control_integrate",
    srcs = ["kuka_task_control_integrate.cc"],
    copts = COPTS,
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common/trajectories:piecewise_polynomial",
        "//lcmtypes:iiwa",
        "//lcmtypes:robot_plan",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)

drake_cc_binary(
    name = "kuka_task_follower",
    srcs = ["kuka_task_follower.cc"],
    copts = COPTS,
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common/trajectories:piecewise_polynomial",
        "//lcmtypes:iiwa",
        "//lcmtypes:robot_plan",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)


drake_cc_binary(
    name = "kuka_task_control_integrate_barrier",
    srcs = ["kuka_task_control_integrate_barrier.cc"],
    copts = COPTS,
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common/trajectories:piecewise_polynomial",
        "//lcmtypes:iiwa",
        "//lcmtypes:robot_plan",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)

drake_cc_binary(
    name = "kuka_task_control_barrier_outside",
    srcs = ["kuka_task_control_barrier_outside.cc"],
    copts = COPTS,
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common/trajectories:piecewise_polynomial",
        "//lcmtypes:iiwa",
        "//lcmtypes:robot_plan",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)

drake_cc_binary(
    name = "kuka_task_control_barrier_joint_out",
    srcs = ["kuka_task_control_barrier_joint_out.cc"],
    copts = COPTS,
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common/trajectories:piecewise_polynomial",
        "//lcmtypes:iiwa",
        "//lcmtypes:robot_plan",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)

drake_cc_binary(
    name = "kuka_task_control_singularity",
    srcs = ["kuka_task_control_singularity.cc"],
    copts = COPTS,
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common/trajectories:piecewise_polynomial",
        "//lcmtypes:iiwa",
        "//lcmtypes:robot_plan",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)

drake_cc_binary(
    name = "kuka_task_control_joint_positions",
    srcs = ["kuka_task_control_joint_positions.cc"],
    copts = COPTS,
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common/trajectories:piecewise_polynomial",
        "//lcmtypes:iiwa",
        "//lcmtypes:robot_plan",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)


drake_cc_binary(
    name = "kuka_task_control_joint_velocity",
    srcs = ["kuka_task_control_joint_velocity.cc"],
    copts = COPTS,
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common/trajectories:piecewise_polynomial",
        "//lcmtypes:iiwa",
        "//lcmtypes:robot_plan",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)

drake_cc_binary(
    name = "kuka_task_control_nust2",
    srcs = ["kuka_task_control_nust2.cc"],
    copts = COPTS,
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common/trajectories:piecewise_polynomial",
        "//lcmtypes:iiwa",
        "//lcmtypes:robot_plan",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)

drake_cc_binary(
    name = "kuka_task_control_final",
    srcs = ["kuka_task_control_final.cc"],
    copts = COPTS,
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common/trajectories:piecewise_polynomial",
        "//lcmtypes:iiwa",
        "//lcmtypes:robot_plan",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)

drake_cc_binary(
    name = "kuka_task_control_kuka",
    srcs = ["kuka_task_control_kuka.cc"],
    copts = COPTS,
    linkopts = Linkopts,
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common/trajectories:piecewise_polynomial",
        "//lcmtypes:iiwa",
        "//lcmtypes:robot_plan",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)

drake_cc_binary(
    name = "kuka_task_control_tri_mode",
    srcs = ["kuka_task_control_tri_mode.cc"],
    copts = COPTS,
    linkopts = Linkopts,
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common/trajectories:piecewise_polynomial",
        "//lcmtypes:iiwa",
        "//lcmtypes:robot_plan",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)


drake_cc_binary(
    name = "kuka_task_control_tri_singularity",
    srcs = ["kuka_task_control_tri_singularity.cc"],
    copts = COPTS,
    linkopts = Linkopts,
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common/trajectories:piecewise_polynomial",
        "//lcmtypes:iiwa",
        "//lcmtypes:robot_plan",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)

drake_cc_binary(
    name = "kuka_task_control_kuka_tracking",
    srcs = ["kuka_task_control_kuka_tracking.cc"],
    copts = COPTS,
    linkopts = Linkopts,
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common/trajectories:piecewise_polynomial",
        "//lcmtypes:iiwa",
        "//lcmtypes:robot_plan",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)


drake_cc_binary(
    name = "kuka_task_control_final_pipe",
    srcs = ["kuka_task_control_final_pipe.cc"],
    copts = COPTS,
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common/trajectories:piecewise_polynomial",
        "//lcmtypes:iiwa",
        "//lcmtypes:robot_plan",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)

drake_cc_binary(
    name = "integrate_lcm_2_ros_master",
    srcs = ["integrate_lcm_2_ros_master.cc"],
    copts = COPTS,
    linkopts = Linkopts,
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common/trajectories:piecewise_polynomial",
        "//lcmtypes:iiwa",
        "//lcmtypes:robot_plan",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)

drake_cc_binary(
    name = "integrate_lcm_2_ros_slave",
    srcs = ["integrate_lcm_2_ros_slave.cc"],
    copts = COPTS,
    linkopts = Linkopts,
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common/trajectories:piecewise_polynomial",
        "//lcmtypes:iiwa",
        "//lcmtypes:robot_plan",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)

drake_cc_binary(
    name = "integrate_lcm_2_ros",
    srcs = ["integrate_lcm_2_ros.cc"],
    copts = COPTS,
    linkopts = Linkopts,
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common/trajectories:piecewise_polynomial",
        "//lcmtypes:iiwa",
        "//lcmtypes:robot_plan",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)

drake_cc_binary(
    name = "integrate_lcm_2_ros_sfam",
    srcs = ["integrate_lcm_2_ros_sfam.cc"],
    copts = COPTS,
    linkopts = Linkopts,
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common/trajectories:piecewise_polynomial",
        "//lcmtypes:iiwa",
        "//lcmtypes:robot_plan",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)

drake_cc_binary(
    name = "TRI_Demo_LCM2ROS",
    srcs = ["TRI_Demo_LCM2ROS.cc"],
    copts = COPTS,
    linkopts = Linkopts,
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common/trajectories:piecewise_polynomial",
        "//lcmtypes:iiwa",
        "//lcmtypes:robot_plan",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)


drake_cc_binary(
    name = "kuka_task_control_weightQP",
    srcs = ["kuka_task_control_weightQP.cc"],
    copts = COPTS,
    linkopts = Linkopts,
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common/trajectories:piecewise_polynomial",
        "//lcmtypes:iiwa",
        "//lcmtypes:robot_plan",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)

drake_cc_binary(
    name = "kuka_task_control_final_firstorder",
    srcs = ["kuka_task_control_final_firstorder.cc"],
    copts = COPTS,
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common/trajectories:piecewise_polynomial",
        "//lcmtypes:iiwa",
        "//lcmtypes:robot_plan",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)


drake_cc_binary(
    name = "kuka_task_control_joint_velocity_cbfonly",
    srcs = ["kuka_task_control_joint_velocity_cbfonly.cc"],
    copts = COPTS,
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common/trajectories:piecewise_polynomial",
        "//lcmtypes:iiwa",
        "//lcmtypes:robot_plan",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)


drake_cc_binary(
    name = "kuka_task_control_velocity",
    srcs = ["kuka_task_control_velocity.cc"],
    copts = COPTS,
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common/trajectories:piecewise_polynomial",
        "//lcmtypes:iiwa",
        "//lcmtypes:robot_plan",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)



drake_cc_binary(
    name = "kuka_task_control_singularity2",
    srcs = ["kuka_task_control_singularity2.cc"],
    copts = COPTS,
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common/trajectories:piecewise_polynomial",
        "//lcmtypes:iiwa",
        "//lcmtypes:robot_plan",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)

drake_cc_binary(
    name = "kuka_task_control_barrier_outside2",
    srcs = ["kuka_task_control_barrier_outside2.cc"],
    copts = COPTS,
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common/trajectories:piecewise_polynomial",
        "//lcmtypes:iiwa",
        "//lcmtypes:robot_plan",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)

drake_cc_binary(
    name = "kuka_task_control_barrier_outside3",
    srcs = ["kuka_task_control_barrier_outside3.cc"],
    copts = COPTS,
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common/trajectories:piecewise_polynomial",
        "//lcmtypes:iiwa",
        "//lcmtypes:robot_plan",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)


drake_cc_binary(
    name = "move_iiwa_ee",
    srcs = ["move_iiwa_ee.cc"],
    data = [
        ":models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        ":iiwa_common",
        "//common:add_text_logging_gflags",
        "//lcmtypes:iiwa",
        "//manipulation/util:move_ik_demo_base",
        "//math:geometric_transform",
        "@lcm",
    ],
)

alias(
    name = "models",
    actual = "//examples/kuka_iiwa_arm/models:models",
    visibility = ["//visibility:public"],
)

alias(
    name = "prod_models",
    actual = "//examples/kuka_iiwa_arm/models:prod_models",
    visibility = ["//visibility:public"],
)

# === test/ ===

drake_cc_googletest(
    name = "kuka_torque_controller_test",
    data = [
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        ":iiwa_common",
        ":kuka_torque_controller",
        "//common/test_utilities:eigen_matrix_compare",
        "//multibody/parsing",
    ],
)

drake_cc_googletest(
    name = "optitrack_test",
    deps = [
        "@optitrack_driver//lcmtypes:optitrack_lcmtypes",
    ],
)

alias(
    name = "dual_iiwa14_polytope_collision.urdf",
    actual = "//manipulation/models/iiwa_description:urdf/dual_iiwa14_polytope_collision.urdf",  # noqa
)

# Test that kuka_simulation can load the dual arm urdf
sh_test(
    name = "dual_kuka_simulation_test",
    size = "small",
    srcs = ["kuka_simulation"],
    args = [
        "$(location :kuka_simulation)",
        "--urdf",
        "$(location :dual_iiwa14_polytope_collision.urdf)",
        "--simulation_sec=0.01",
    ],
    data = [
        ":dual_iiwa14_polytope_collision.urdf",
    ],
    # TODO(kyle.edwards@kitware.com): Re-enable this test when it no longer
    # causes timeouts in kcov.
    tags = ["no_kcov"],
)

# This examples needs to be install for external projects such as Spartan.
install(
    name = "install",
    install_tests = [
        ":test/kuka_plan_runner_installed_test.py",
        ":test/kuka_simulation_installed_test.py",
    ],
    targets = [
        ":kuka_plan_runner",
        ":kuka_simulation",
    ],
    runtime_dest = "share/drake/examples/kuka_iiwa_arm",
    visibility = ["//visibility:public"],
)

install(
    name = "install_data",
    visibility = ["//visibility:public"],
    deps = [
        "//examples/kuka_iiwa_arm/models:install_data",
    ],
)

add_lint_tests(
    python_lint_extra_srcs = [
        ":test/kuka_plan_runner_installed_test.py",
        ":test/kuka_simulation_installed_test.py",
    ],
)
